--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffffff"> <!-- Add theme color for light mode -->
     <title>{{ .Site.Title }}</title>
 
@@ -27,6 +28,7 @@
         <li><a href="#" class="text-sm neon-hover px-4 py-1 rounded">Contact</a></li>
     </ul>
 </nav>
+
 <div class="toggle-container" id="theme-toggle">
     <div class="toggle-icon sun">☀️</div>
     <div class="toggle-icon moon">🌙</div>
